<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource,UnusedNavigation"

    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gerson.droidcafeadaptative.ui.ui_00_home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/frag_00_home"
    />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.gerson.droidcafeadaptative.ui.ui_gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/frag_10_gallery"
    />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gerson.droidcafeadaptative.ui.ui_slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/frag_20_slideshow"
    />
    <fragment
        android:id="@+id/nav_tools"
        android:name="com.gerson.droidcafeadaptative.ui.ui_tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/frag_30_tools"
    />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.gerson.droidcafeadaptative.ui.ui_share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/frag_40_share"
    />
    <fragment
        android:id="@+id/nav_send"
        android:name="com.gerson.droidcafeadaptative.ui.ui_send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/frag_50_send"
    />
</navigation>